redis/master_replica.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-primary
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: redis
  selector:
    name: redis-primary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-primary
  labels:
    name: redis-primary
spec:
  replicas: 1 
  selector:
    matchLabels:
      name: redis-primary
  template:
    metadata:
      labels:
        name: redis-primary
    spec:
      subdomain: primary
      containers:
      - name: redis
        image: redis:3.2.0-alpine
        command:
          - "redis-server"
        args:
          - "--protected-mode"
          - "no"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: redis
  selector:
    name: redis-replica
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica
  labels:
    name: redis-replica
spec:
  replicas: 2 
  selector:
    matchLabels:
      name: redis-replica
  template:
    metadata:
      labels:
        name: redis-replica
    spec:
      subdomain: replica
      containers:
      - name: redis
        image: redis:3.2.0-alpine
        command:
          - "redis-server"
        # env:
        # - name: REDIS_MASTER_HOST
        #   value: "redis-primary"  # This should match the master service name
        # - name: REDIS_MASTER_PORT
        #   value: "6379"
        args:
          - "--slaveof"
          - "redis-primary.default.svc.cluster.local"
          - "6379"
          - "--protected-mode"
          - "no"
        ports:
        - containerPort: 6379
