redis/single.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-pers
spec:
  selector:
    app: redis-pers-deployment
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-pers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pers-deployment
  template:
    metadata:
      labels:
        app: redis-pers-deployment
    spec:
      containers:
      - name: redis
        image: "redis:5.0.4-alpine"
        command:
          - "redis-server"
        args:
          - "/etc/redis/redis.conf"
          - "--protected-mode"
          - "no"
          - "--appendonly"
          - "no"
          - "--save"
          - "300"
          - "1"
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: "redis-pers-conf"
          mountPath: "/etc/redis"
        - name: redis-pers-volume
          mountPath: /data
      volumes:
      - name: "redis-pers-conf"
        configMap:
          name: "redis-pers-conf"
          items:
          - key: "redis.conf"
            path: "redis.conf"
      - name: redis-pers-volume
        persistentVolumeClaim:
          claimName: redis-pers-pv-claim
      imagePullSecrets:
        - name: regcred1
